--- a/build.gradle
+++ b/build.gradle
@@ -47,10 +47,14 @@ dependencies {
 
     // Develop Tool
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.542'
 
     // etc
     implementation group: 'commons-io', name: 'commons-io', version: '2.17.0'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'  // Spring Security & Thymeleaf
+
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
+
 }
 
 tasks.named('test') {
